fix: reject domain agent attachments without type config